--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.wingled22.androidcrud">
 
     <application
@@ -11,6 +12,10 @@
         <activity android:name=".CategoryActivity"
             android:exported="false"
             />
+        <activity android:name=".FruitActivity"
+            android:exported="false"
+            />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
