--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidCRUD">
+
+        android:theme="@style/Theme.AppCompat.Light"
+
+        >
         <activity android:name=".CategoryActivity"
             android:exported="false"
             />
@@ -20,7 +23,8 @@
 
         <activity android:name=".CardsOnGridActivity"
             android:exported="false"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
+
             />
         <activity
             android:name=".MainActivity"
@@ -31,6 +35,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
 
         <meta-data android:name="DATABASE" android:value="albertos.db" />
         <meta-data android:name="VERSION" android:value="1" />
